--- a/style.css
+++ b/style.css
@@ -1,172 +1,121 @@
-/*
-Project Name: Wyzant Examples
-Author: Lee Mandell
-email: lrm.wyzant@gmail.com
-*/
-
-/*
-Table of Contents
-  =01 Reset/Global/Helpers
-  =02 Typography
-  =03 Nav
-  =04 Layout
-    =PAGE SPECIFIC STYLES
-      =ABOUT
-*/
-
-/***** =01 Reset/Global Defaults *****/
-/* #region */
-/*
-  see also:
-  Eric Meyer's reset: https://meyerweb.com/eric/tools/css/reset/
-  normalize.css - https://necolas.github.io/normalize.css/
-  https://scotch.io/tutorials/a-look-at-bootstrap-4s-new-reset-rebootcss
-  https://github.com/twbs/bootstrap/blob/v4-dev/dist/css/bootstrap-reboot.css
-	https://hankchizljaw.com/wrote/a-modern-css-reset/
-*/
-
 * {
-	/* see https://css-tricks.com/box-sizing/ */
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
-	margin: 0;
-	padding: 0;
+body {
+    font-family: 'Source Sans Pro', sans-serif;    background: #948a8a;
+    color: white;
+    background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
 
-	font-family: inherit;
-	line-height: inherit;
-	color: inherit;
+main {
+    margin-bottom: 1em;
+    padding-bottom: 1em;
+}
 
+@keyframes gradient {
+    
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+    padding: 1ch;
+}
+
+.nav-primary {
+    background-color: black;
+    padding: 1em 0;
+}
+
+.nav-primary ul {
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+}
+
+.nav-primary li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 11ch;
+    font-size: 1em;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    transition: .5s;
+}
+
+.nav-projects {
+    margin-bottom: 1em;
+}
+
+.nav-projects li {
+    padding-bottom: 0.5em;
+}
+
+header {
+    text-align: center;
+    
+}
+header a {
+    text-decoration: none;
+    color: white;
+}
+
+header a:hover {
+    text-decoration: underline;
+}
+
+h1, h2, p {
+    text-align: center;
+    font-weight: lighter;
+    font-size: 50px;
+    padding: 1em;
 }
 
 p {
-	margin-bottom: 1em;
+    padding: 1em 0;
+    font-size: 20px;
 }
 
-img {
-	display: block;
-	width: 100%;
+#projects {
+    text-align: center;
 }
-
-.me-excited {
-	text-transform: uppercase;
-	font-weight: bold;
-}
-
-.me-hide,
-.no-css {
-	display: none;
-}
-
-
-
-/* #endregion */
-
-/***** =02 Typography *****/
-/* #region */
-html {
-	font-size: 100%;
-	line-height: 1.2;
-	color: #222;
-	overflow-y: scroll;
+.media ul {
+    width: 100%;
+    margin: 0 auto;
+    max-width: 300px;
+    display: flex;
+    justify-content: space-around;
 
 }
 
-
-body {
-	/* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, Noto Sans, sans-serif,  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";*/
-	font-family: 'Cardo', serif;
-	font-size: 1rem;
-	font-weight: 400;
-	line-height: 1.5;
-	text-align: center;
-	color: hsl(204, 19%, 88%);
+.media li {
+    list-style: none;
+    display: inline-block;
+    font-size: 20px;
+    padding: 20px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    transition: .5s;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	font-weight: bold;
-	font-family: 'Oswald', sans-serif;
-	text-transform: uppercase;
-	line-height: 1.2;
+.media li:hover {
+    color: #292929;
+    transition: .5s;
 }
-
-h1,
-h2 {
-	margin: .5em 0;
-	color: #ffce00;
-}
-
-h1{
-	letter-spacing: 4px;
-}
-
-a {
-	color: white;
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-/**** 480px/30em ****/
-@media screen and (min-width: 30em) {}
-
-/**** 480px/30em ends ****/
-
-/* #endregion */
-
-/***** =03 Nav *****/
-/* #region */
-nav ul {
-	display: flex;
-	justify-content: space-between;
-	list-style-type: none;
-  }
-  /**** 480px/30em ****/
-  @media screen and (min-width: 30em) {}
-  
-  /**** 480px/30em ends ****/
-  
-  /* #endregion */
-  
-  /***** =04 Layout *****/
-  /* #region */
-  /*
-	  Global styles, mobil first
-	  Then Media Queries for Global styles
-	  Then Page Specific styles with their media queries
-  */
-  
-  body {
-	background-color: hsla(225, 12%, 70%, -.4); 
-	background-image:url(https://wallpaperaccess.com/full/17520.jpg);
-	background-repeat: no-repeat;
-	background-position: top center;
-	width: 100%;
-	padding: 1em 1em;
-
-}
-  .nav-primary {
-	  background-color: black;
-  }
-  
-  /* All the rest of the basic mobil layout style rules */
-  
-  /**** 480px/30em ****/
-  @media screen and (min-width: 30em) {}
-  
-  /**** 480px/30em ends ****/
-  
-  /**** 600px/37.5em ****/
-  @media screen and (min-width: 37.5em) {}
-  
-  /**** 600px/37.5em ends ****/
-  
-  /* #endregion */
